# TAD_Colectie

./: CMakeLists.txt
Proiect C++/Colectie (cu rel)/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Teste (cu relatie)/: TestExtins.cpp  TestScurt.cpp
