cmake_minimum_required(VERSION 3.27)
project(TAD_Colectie)

set(CMAKE_CXX_STANDARD 17)

add_executable(TAD_Colectie
        "Proiect C++/Colectie (cu rel)/App.cpp"
        "Proiect C++/Colectie (cu rel)/Colectie.cpp"
        "Proiect C++/Colectie (cu rel)/IteratorColectie.cpp"
        "Teste (cu relatie)/TestExtins.cpp"
        "Teste (cu relatie)/TestScurt.cpp"
        "Teste (cu relatie)/TestExtins.h")
